unrelated fixit: finally get rid of that scrollbar in outfits when not logged in

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -578,7 +578,6 @@ body.outfits-edit
     
     #preview-outfits-not-logged-in
       text-align: center
-      overflow-x: hidden
       
       img
         border:
